<resources>
    <string name="app_name">AppListaVip</string>
    <string name="txt_lista_vip_curso_android">Lista Vip Curso Android</string>
    <string name="txt_botao_finalizar">FINALIZAR</string>
    <string name="txt_botao_salvar">SALVAR</string>
    <string name="txt_botao_limpar">LIMPAR</string>
    <string name="txt_telefone">Telefone:</string>
    <string name="txt_curso_de_interesse">Curso de Interesse:</string>
    <string name="txt_sobrenome">Sobrenome:</string>
    <string name="txt_nome">Nome:</string>
</resources>