<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/androidTitulo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_lista_vip_curso_android"
                    android:textSize="25sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:srcCompat="@drawable/caixadetexto" />

                <EditText
                    android:id="@+id/idAndroidNome"
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_nome"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:srcCompat="@drawable/caixadetexto" />

                <EditText
                    android:id="@+id/idAndroidSobrenome"
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_sobrenome"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:srcCompat="@drawable/caixadetexto" />

                <EditText
                    android:id="@+id/idAndroidCursoInt"
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_curso_de_interesse"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:textSize="20sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:srcCompat="@drawable/caixadetexto" />

                <EditText
                    android:id="@+id/idAndroidTel"
                    android:layout_width="300dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_telefone"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:textSize="20sp" />
            </FrameLayout>


            <Spinner
                android:id="@+id/idSpinerCurso"
                android:layout_width="400dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idAndroidBtnLimp"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:background="@drawable/botao_fundo_azul"
                    android:text="@string/txt_botao_limpar" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idAndroidBtnSal"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:background="@drawable/botao_fundo_azul"
                    android:text="@string/txt_botao_salvar" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idAndroidBtnFinalizar"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="107dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="107dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/botao_fundo_azul"
                    android:text="@string/txt_botao_finalizar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>

